@@ -1,7 +1,9 @@
 # Default Logging Configuration
 log4j.rootLogger=INFO, stdout
-#log4j.logger.dcm4che.data.DcmObject=DEBUG
-#log4j.logger.dcm4che.net.Association=DEBUG
+#to increase logging level
+#log4j.logger.org.dcm4cheri=DEBUG
+#to decrease logging level
+#log4j.logger.org.dcm4cheri=ERROR
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
