@@ -1,0 +1,20 @@
+ac-timeout=5000
+dimse-timeout=0
+so-close-delay=500
+
+prior=0
+max-pdu-len=16352
+pack-pdvs=false
+
+#key.PatientName=A*
+#key.StudyDate=20030219-
+
+#dest=MOVE_DESTINATION
+
+tls-key=mvstudy.key
+tls-key-passwd=dcm4che
+tls-cacerts=cacerts
+tls-cacerts-passwd=dcm4che
+
+ts=ExplicitVRLittleEndian,ImplicitVRLittleEndian
+
