@@ -1,0 +1,7 @@
+usage=Usage\: java -jar mvstudy.jar [OPTION]... URL [--dest=MOVE_DEST_AET]\nQueries DICOM archive specified by URL for studies with specified matching\nattributes. With --dest=MOVE_DEST_AET, the matching studies will also be\nretrieved to the move destination, specified by its AET\n\nUrl\: PROTOCOL\://CALLED[\:CALLING]@HOST[\:PORT]\n  PROTOCOL   Specifies protocol. Possible values:\n    dicom            DICOM default (without TLS)\n    dicom-tls        DICOM on TLS (offer DES encryption)\n    dicom-tls.3des   DICOM on TLS (force DES encryption)\n    dicom-tls.nodes  DICOM on TLS (no DES encryption)\n  CALLED     Called AET in association request\n  CALLING    Calling AET in association request [default=ANONYMOUS]\n  HOST       Name or IP address of host, where the server is running\n  PORT       TCP port address, on which the server is listing for\n             incoming TCP Transport Connection Indication [default=104]\n\nOptions (override presets defined in resource dcmsnd.cfg)\:\n--key=TAG:VAL          Specifies matching key. Several keys can be specified by\n                       several --key=TAG:VAL options. Take care for escaping\n                       wildcards '*','?' on unix[-like] systems.\n                       (e.g.: --key=PatientName:S\* --key=StudyDate:20030219-).\n--ac-timeout=MSEC      time-out waiting for A-ASSOCIATE-AC,\n                       0 is interpreted as an infinite timeout [default=5000].\n--dimse-timeout=MSEC   time-out waiting for DIMSE on open association,\n                       0 is interpreted as an infinite timeout [default=0].\n--so-close-delay=MSEC  time delay for socket close after sending\n                       A-ABORT [default=500].\n--prior-high           HIGH priority of storage requests [default=NORMAL]\n--prior-low            LOW priority of storage requests [default=NORMAL]\n--max-pdu-len=LEN      set maximal length of receiving PDUs [default=16352]\n--pack-pdvs            activates packing of command PDV + (first) data PDV\n                       into one P-DATA-TF PDU\n--tls-key=KEYSTORE     get key from specified resource [default:qsuids.key]\n--tls-key-passwd=PASS  password for keystore and key specified by --tls-key\n                       [default: dcm4che]\n--tls-cacerts=KEYSTORE read trusted CA Certificats from specified resource\n                       [default:cacerts]\n--tls-cacerts-passwd=PASS  password for keystore specified by --tls-cacerts\n                       [default: dcm4che]\n--help     display this help and exit\n--version  output version information and exit\n
+version=qsuids version @VERSION@ compiled on @TODAY@
+missing=missing DICOM URL
+tomany=to many parameters
+errurl={0} - invalid DICOM URL
+try=Try 'java -jar mvstudy.jar --help' for more information.
+
